新聞記事URL　ローカル読み込み用に修正

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
         <a href="http://www.scn-net.ne.jp/~ponnaret/dance.html">
           <li>🌹カンボジアの光と影</li>
         </a>
-        <a href="http://www.scn-net.ne.jp/~ponnaret/media.html">
+        <a href="media.html">
           <li>🌹新聞記事の紹介</li>
         </a>
         <a href="http://www.scn-net.ne.jp/~ponnaret/myphoto.html">
