タウンニュースファイル名修正

--- a/media.html
+++ b/media.html
@@ -89,8 +89,8 @@
     <FONT size=3>
     　カンボジア大虐殺乗り越え<br>
       <br>
-      <A href="img/townnews.jpg" target=_blank><b>↓全文は以下。クリックすると大きく表示されます</b><br>
-        <IMG src="img/townnews.jpg" border=1 width=700></A>
+      <A href="img/townnews.JPG" target=_blank><b>↓全文は以下。クリックすると大きく表示されます</b><br>
+        <IMG src="img/townnews.JPG" border=1 width=700></A>
         
   <BR><BR><HR>
 
