ホーム画面項目表示修正。各遷移先画面作成

--- a/index.html
+++ b/index.html
@@ -74,19 +74,108 @@
           <tr class="table-culm">
             <td>
               <div class="top-book">
+                <a href="http://www.scn-net.ne.jp/~ponnaret/books.html"><img src="img/IMG_9457.JPG">
+                  <p>女性文化賞<p></p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="top-book">
+                <a href="http://www.scn-net.ne.jp/~ponnaret/books.html"><img src="img/IMG_9461.JPG">
+                  <p>加害者との<br>対面<p></p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="top-book">
+                <a href="http://www.scn-net.ne.jp/~ponnaret/irononaisora/"><img src="img/IMG_9460.PNG">
+                  <p>カンボジアへ慰霊<p></p>
+                </a>
+              </div>
+            </td>
+          </tr>
+          <tr class="table-culm">
+            <td>
+              <div class="top-book">
+                <a href="kouen_jisseki.html"><img src="img/IMG_9458.JPG">
+                  <p>今までの<br>講演実績<p></p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="top-book">
+                <a href="media.html"><img src="img/IMG_9467.JPG">
+                  <p>新聞記事の紹介<p></p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="top-book">
+                <a href="osanakihi.html"><img src="img/IMG_9464.JPG">
+                  <p>幼き日<p></p>
+                </a>
+              </div>
+            </td>
+          </tr>
+          <tr class="table-culm">
+            <td>
+              <div class="top-book">
+                <a href="http://www.scn-net.ne.jp/~ponnaret/dance.html"><img src="img/IMG_9466.JPG">
+                  <p>カンボジアの<br>光と影<p></p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="top-book">
+                <a href="http://www.scn-net.ne.jp/~ponnaret/sabetuhantai.html"><img src="img/IMG_9468.jpg">
+                  <p>来日時受けた<br>人種差別<p></p>
+                </a>
+              </div>
+            </td>
+            <td>
+              <div class="top-book">
+                <a href="http://www.scn-net.ne.jp/~ponnaret/myphoto.html"><img src="img/IMG_9465.JPG">
+                  <p>思い出の写真<p></p>
+                </a>
+              </div>
+            </td>
+          </tr>
+          <tr class="table-culm">
+            <td>
+              <div class="top-book">
+                <a href="http://www.scn-net.ne.jp/~ponnaret/trip_2001.html"><img src="img/IMG_9459.JPG">
+                  <p>家族で<br>カンボジア旅行<p></p>
+                </a>
+              </div>
+            </td>
+            <td>
+            </td>
+            <td>
+            </td>
+          </tr>
+          <tr class="table-culm">
+            <td>
+              <div class="top-book">
                 <a href="http://www.scn-net.ne.jp/~ponnaret/books.html"><img src="img/book.jpg">
                   <p>書籍一覧<p></p>
                 </a>
               </div>
             </td>
             <td>
-              <div class="top-boad">
-                <a href="https://6250.teacup.com/ponnaret/bbs"><img src="img/board.jpg">
-                  <p>掲示板</p>
+              <div class="top-book">
+                <a href="http://www.scn-net.ne.jp/~ponnaret/mail.html"><img src="img/IMG_mail.JPG">
+                  <p>メールBOX<p></p>
                 </a>
               </div>
             </td>
-          </tr>
+            <td>
+              <div class="top-book">
+                <a href="https://6250.teacup.com/ponnaret/bbs"><img src="img/board.jpg">
+                  <p>掲示板<p></p>
+                </a>
+              </div>
+            </td>
+          </tr>       
         </table>
       </div>
     </div>
@@ -162,24 +251,21 @@
         <h2>information...</h2>
       </div>
       <ul class="menu-lists">
-        <a href="http://www.scn-net.ne.jp/~ponnaret/dance.html">
+        <!-- <a href="http://www.scn-net.ne.jp/~ponnaret/dance.html">
           <li>🌹カンボジアの光と影</li>
-        </a>
-        <a href="media.html">
+        </a> -->
+        <!-- <a href="media.html">
           <li>🌹新聞記事の紹介</li>
-        </a>
-        <a href="http://www.scn-net.ne.jp/~ponnaret/myphoto.html">
+        </a> -->
+        <!-- <a href="http://www.scn-net.ne.jp/~ponnaret/myphoto.html">
           <li>🌹思い出の写真</li>
-        </a>
-        <a href="http://www.scn-net.ne.jp/~ponnaret/sabetuhantai.html">
+        </a> -->
+        <!-- <a href="http://www.scn-net.ne.jp/~ponnaret/sabetuhantai.html">
           <li>🌹来日時に受けた「人種差別、偏見」</li>
-        </a>
-        <a href="http://www.scn-net.ne.jp/~ponnaret/link.html">
-          <li>🌹お世話になっている方々</li>
-        </a>
-        <a href="http://www.scn-net.ne.jp/~ponnaret/trip_2001.html">
+        </a> -->
+        <!-- <a href="http://www.scn-net.ne.jp/~ponnaret/trip_2001.html">
           <li>🌹初めて家族とのカンボジア旅行</li>
-        </a>
+        </a> -->
 
 
       </ul>
