メールの修正依頼完了。残りの細かい修正は直接確認。

--- a/index.html
+++ b/index.html
@@ -74,22 +74,22 @@
           <tr class="table-culm">
             <td>
               <div class="top-book">
-                <a href="http://www.scn-net.ne.jp/~ponnaret/books.html"><img src="img/IMG_9457.JPG">
+                <a href="josei_bunkasho.html"><img src="img/IMG_9457.JPG">
                   <p>女性文化賞<p></p>
                 </a>
               </div>
             </td>
             <td>
               <div class="top-book">
-                <a href="http://www.scn-net.ne.jp/~ponnaret/books.html"><img src="img/IMG_9461.JPG">
+                <a href="kagaisha_taimen.html"><img src="img/IMG_9461.JPG">
                   <p>加害者との<br>対面<p></p>
                 </a>
               </div>
             </td>
             <td>
               <div class="top-book">
-                <a href="http://www.scn-net.ne.jp/~ponnaret/irononaisora/"><img src="img/IMG_9460.PNG">
-                  <p>カンボジアへ慰霊<p></p>
+                <a href="irononaisora.html"><img src="img/IMG_9460.PNG">
+                  <p>カンボジアへ<br>慰霊<p></p>
                 </a>
               </div>
             </td>
@@ -248,7 +248,7 @@
   <div class="menu-list">
     <div class="inner">
       <div class="menu-title">
-        <h2>information...</h2>
+        <h2>長野にて娘の初舞踊<br>左：ポンナレット　右：娘の真輝</h2>
       </div>
       <ul class="menu-lists">
         <!-- <a href="http://www.scn-net.ne.jp/~ponnaret/dance.html">
