テーブルの不要ボーダー線　削除

--- a/kouen_jisseki.html
+++ b/kouen_jisseki.html
@@ -15,11 +15,11 @@
   </head>
   
       <div class="kouen_jisseki">
-  <TABLE class="kouen_jisseki" borderColor=green width=700 border=1>
+  <TABLE class="kouen_jisseki" width=700 >
       <TR>
       <img src="img/kouenjisseki.jpg" alt="">    
       </div>
   </BODY>
-  <BR><BR><BR><BR><BR><BR>
+
   </html>
   
