2021/5/5 追加仕様対応 進捗率100%
■追加画面
・真輝の舞踊
■修正画面
・加害者との対面
・幼き日
・女性文化賞

--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
               </div>
             </td>
             <td>
+              <div class="top-book">
+                <a href="maki_buyou.html"><img src="img/IMG_9459.JPG">
+                  <p>娘 真輝の舞踊<p></p>
+                </a>
+              </div>
             </td>
             <td>
             </td>
