2021/5/8 メールでの要望対応 進捗率100％(確認事項あり)
メールで確認
・女性文化賞ページ画像追加 に対してコメントするのか？

--- a/index.html
+++ b/index.html
@@ -134,7 +134,8 @@
             </td>
             <td>
               <div class="top-book">
-                <a href="http://www.scn-net.ne.jp/~ponnaret/myphoto.html"><img src="img/IMG_9465.JPG">
+                <!-- <a href="http://www.scn-net.ne.jp/~ponnaret/myphoto.html"><img src="img/IMG_9465.JPG"> -->
+                <a href="omoide_shashin.html"><img src="img/IMG_9465.JPG">
                   <p>思い出の写真<p></p>
                 </a>
               </div>
