--- a/josei_bunkasho.html
+++ b/josei_bunkasho.html
@@ -18,29 +18,84 @@
       <div class="bunka_title bunka_title4">
         <div class="heading"><span  style="color:orange">★</span>第22回　女性文化賞を頂きました<span style="color:orange">★</span></div>
       </div>
-    <div class="bunka_subtitle" color=black size= +1>～掲載して頂いた記事をご紹介いたします～<BR><BR>
+    
+
+    <!-- タイトル文章 -->
+    <div class="bunka_main_title">
+      <p>女性史研究者の米田佐代子さんが「第22回女性文化賞」に私を選んで下さいました。<br>
+        受賞の理由として、米田さんは、私が本や講演などを通じて、最も望み、<br>
+        伝えたかった戦争の残酷さ、差別のない世界と平和は全人類の宝であること、<br>
+        そして、「世界に、憎しみと争いではなく和解と平和を」というメッセージを受け取って下さったのです。
+      </p>
+
     </div>
 
-  <div class="bunka_main" >
+    <!-- 文化賞用の画像一覧 -->
+    <div class="bunka_main1" >
+      <div class="bunka_subtitle" color=black size= +1>～授賞式の写真をご紹介します～<BR><BR>
+      </div>
+
+      <div class="bunka_img1">
+        <A href="bunkasho_img/IMG_001.jpg" target=_blank><br>
+          <IMG src="bunkasho_img/IMG_001.jpg" border=1 width=600></A>
+      </div>    
   
-    <div class="bunka_img1">
-    <FONT class="bunka_font"  size=+2><B>讀賣新聞（掲載年月日：2019年1月20日）</B></STRONG></FONT><BR>
-    <FONT class="bunka_font" ><STRONG>カンボジア出身者 女性文化省<BR></STRONG></FONT>
-    <FONT size=3>
-      内戦生き延び来日 平和訴え出版や講演<br>
-      <A class="bunka_font" href="img/asahi_joseibunkasho.JPG" target=_blank><b>↓全文は以下。クリックすると大きく表示されます</b><br>
-        <IMG src="img/asahi_joseibunkasho.JPG" border=1 width=500></A>
-    </div>    
+      <div class="bunka_img1">
+        <A href="bunkasho_img/IMG_002.jpg" target=_blank><br>
+          <IMG src="bunkasho_img/IMG_002.jpg" border=1 width=600></A>   
+      </div>
 
-    <div class="bunka_img1">
-    <FONT class="bunka_font" size=+2><B>タウンニュース（掲載年月日：2019年1月17日）</B></STRONG></FONT><BR>
-    <FONT class="bunka_font"><STRONG>女性文化賞  受賞について<BR></STRONG></FONT>
-    <FONT size=3>
-    　カンボジア大虐殺乗り越え<br>
-      <A class="bunka_font" href="img/townnews.JPG" target=_blank><b>↓全文は以下。クリックすると大きく表示されます</b><br>
-        <IMG src="img/townnews.JPG" border=1 width=500 height=600></A>    
+      <div class="bunka_img1">
+        <A href="bunkasho_img/IMG_003.jpg" target=_blank><br>
+          <IMG src="bunkasho_img/IMG_003.jpg" border=1 width=550 height=400></A>   
+      </div>
+
+      <div class="bunka_img1">
+        <A href="bunkasho_img/IMG_004.jpg" target=_blank><br>
+          <IMG src="bunkasho_img/IMG_004.jpg" border=1 width=400 height=550></A>   
+      </div>
+
+      <div class="bunka_img1">
+        <A href="bunkasho_img/IMG_005.jpg" target=_blank><br>
+          <IMG src="bunkasho_img/IMG_005.jpg" border=1 width=600></A>   
+      </div>
+
+      <div class="bunka_img1">
+        <A href="bunkasho_img/IMG_006.jpg" target=_blank><br>
+          <IMG src="bunkasho_img/IMG_006.jpg" border=1 width=600></A>   
+      </div>
+
+      <div class="bunka_img1">
+        <A href="bunkasho_img/IMG_007.jpg" target=_blank><br>
+          <IMG src="bunkasho_img/IMG_007.jpg" border=1 width=600></A>   
+      </div>
+
+
+
     </div>
-  </div>
+  
+    <!-- 新聞記事画像 領域 -->
+    <div class="bunka_main2" >
+      <div class="bunka_subtitle" color=black size= +1>～掲載して頂いた記事をご紹介いたします～<BR><BR>
+      </div>
+      <div class="bunka_img1">
+      <FONT class="bunka_font"  size=+2><B>讀賣新聞（掲載年月日：2019年1月20日）</B></STRONG></FONT><BR>
+      <FONT class="bunka_font" ><STRONG>カンボジア出身者 女性文化省<BR></STRONG></FONT>
+      <FONT size=3>
+        内戦生き延び来日 平和訴え出版や講演<br>
+        <A class="bunka_font" href="img/asahi_joseibunkasho.JPG" target=_blank><b>↓全文は以下。クリックすると大きく表示されます</b><br>
+          <IMG src="img/asahi_joseibunkasho.JPG" border=1 width=500></A>
+      </div>    
+
+      <div class="bunka_img1">
+      <FONT class="bunka_font" size=+2><B>タウンニュース（掲載年月日：2019年1月17日）</B></STRONG></FONT><BR>
+      <FONT class="bunka_font"><STRONG>女性文化賞  受賞について<BR></STRONG></FONT>
+      <FONT size=3>
+      　カンボジア大虐殺乗り越え<br>
+        <A class="bunka_font" href="img/townnews.JPG" target=_blank><b>↓全文は以下。クリックすると大きく表示されます</b><br>
+          <IMG src="img/townnews.JPG" border=1 width=500 height=600></A>    
+      </div>
+    </div>
    
   
   </BODY>
