--- a/kagaisha_taimen.html
+++ b/kagaisha_taimen.html
@@ -28,7 +28,7 @@
         </div>
       </div>
 
-      <div class="main">
+      <div class="kagaisha_main1">
         
         <div class="kagaisha_img1">
           <A href="202105_newIMAGE/DSC_4125.JPG" target=_blank><br>
@@ -38,7 +38,7 @@
     
         <div class="kagaisha_img1">
           <A href="202105_newIMAGE/IMG_9855.JPG" target=_blank><br>
-            <IMG src="202105_newIMAGE/IMG_9855.JPG" border=1 width=450 height=600px></A>
+            <IMG src="202105_newIMAGE/IMG_9855.JPG" border=1 width=400 height=500px></A>
               <FONT><STRONG><br>キリングフィールドの入口に立つ私ポンナレット<br><br></STRONG></FONT>
         </div>
 
@@ -80,7 +80,7 @@
 
         <div class="kagaisha_img1">
           <A href="202105_newIMAGE/IMG_scan.JPG" target=_blank><br>
-            <IMG src="202105_newIMAGE/IMG_scan.JPG" border=1 width=450 height=600></A>
+            <IMG src="202105_newIMAGE/IMG_scan.JPG" border=1 width=400 height=500></A>
               <FONT><STRONG><br>私の姿を母の亡霊でも見たかのように驚く当時のソート村長<br><br></STRONG></FONT>
         </div>
 
@@ -104,6 +104,21 @@
 
       </div>
 
+    <div class="kagaisha_main2">
+      <div class="bunka_subtitle" color=black size= +1>～掲載された記事をご紹介します～<BR> 
+      </div>
+
+      <div class="kagaisha_img1">
+        <FONT><STRONG><br>婦人通信 2019年6月号</STRONG></FONT>
+        <A href="img/IMG_20210508_0001.jpg" target=_blank><br>
+          <IMG src="img/IMG_20210508_0001.jpg" border=1 width=350 height=450></A>
+      </div>
+
+      <div class="kagaisha_img1">
+        <A href="img/fujinsassi.jpg" target=_blank><br>
+          <IMG src="img/fujinsassi.jpg" border=1 width=600></A>
+      </div>
+    </div>
   
     <TABLE class="kagaisha_table" border=1>
       <TR><TD>
