--- a/josei_bunkasho.html
+++ b/josei_bunkasho.html
@@ -46,13 +46,13 @@
       </div>
 
       <div class="bunka_img1">
-        <A href="bunkasho_img/IMG_003.jpg" target=_blank><br>
-          <IMG src="bunkasho_img/IMG_003.jpg" border=1 width=550 height=400></A>   
+        <A href="bunkasho_img/IMG_003.JPG" target=_blank><br>
+          <IMG src="bunkasho_img/IMG_003.JPG" border=1 width=550 height=400></A>   
       </div>
 
       <div class="bunka_img1">
-        <A href="bunkasho_img/IMG_004.jpg" target=_blank><br>
-          <IMG src="bunkasho_img/IMG_004.jpg" border=1 width=400 height=550></A>   
+        <A href="bunkasho_img/IMG_004.JPG" target=_blank><br>
+          <IMG src="bunkasho_img/IMG_004.JPG" border=1 width=400 height=550></A>   
       </div>
 
       <div class="bunka_img1">
