5/12 メール追加要望修正完了
・思い出のページにきょうだいたちとの写真を2枚追加
・「女性文化賞」ページ に画像追加
・真輝の舞踊に画像追加

--- a/josei_bunkasho.html
+++ b/josei_bunkasho.html
@@ -46,6 +46,11 @@
       </div>
 
       <div class="bunka_img1">
+        <A href="bunkasho_img/IMG_008.jpg" target=_blank><br>
+          <IMG src="bunkasho_img/IMG_008.jpg" border=1 width=600 height=450></A>   
+      </div>
+
+      <div class="bunka_img1">
         <A href="bunkasho_img/IMG_003.JPG" target=_blank><br>
           <IMG src="bunkasho_img/IMG_003.JPG" border=1 width=550 height=400></A>   
       </div>
@@ -69,8 +74,6 @@
         <A href="bunkasho_img/IMG_007.jpg" target=_blank><br>
           <IMG src="bunkasho_img/IMG_007.jpg" border=1 width=600></A>   
       </div>
-
-
 
     </div>
   
