--- a/maki_buyou.html
+++ b/maki_buyou.html
@@ -62,6 +62,12 @@
             <IMG src="buyou_img/IMG_sotugyousho.JPG" border=1 width=600></A>
               <FONT><STRONG><br>CAMBODIA LIVING ARTS 修了証<br><br></STRONG></FONT>
         </div>
+
+        <div class="buyou_img1">
+          <A href="buyou_img/IMG_nagano.jpg" target=_blank><br>
+            <IMG src="buyou_img/IMG_nagano.jpg" border=1 width=600></A>
+              <FONT><STRONG><br>真輝とポンナレットの長野での舞踊写真<br><br></STRONG></FONT>
+        </div>
       </div> 
   </BODY>
 
