--- a/omoide_shashin.html
+++ b/omoide_shashin.html
@@ -159,7 +159,7 @@
                   <p>生前のカーヌおじさんを囲んで</p>
                   <div class="omoide_font">
                   <FONT><STRONG>
-                    <br><br><br><br><br><br><br></STRONG></FONT>
+                    <br><br><br><br><br></STRONG></FONT>
                   </div>
           </td>
           <td>
@@ -169,7 +169,7 @@
                   <FONT><STRONG>
                     カンボジアレストラン「アンコル・トム」オーナーであるトラ兄さん。（左）<br>
                   『私は水玉のシマウマ』（講談社）『アンコール・ワットの青い空の下で』（てらいんく）の著者であるセタリン姉さん。<br>
-                  （右）他人には優しく、妹である私にはとても厳しい２人です。</STRONG></FONT>
+                  （右）他人には優しく、妹である私にはとても厳しい２人です。  </STRONG></FONT>
                   </div>
           </td>
         </tr>
