2021/5/17 全ページ要望対応完了 + 全ページヘッダー追加

--- a/index.html
+++ b/index.html
@@ -19,23 +19,23 @@
     <div class="header-container">
       <div class="header-title">
         <div id="top-btn" class="header-logo">
-          <li><img src="img/title_logo.jpg"></li>
+          <li><img src="img/title_logo.jpg">　</li>
         </div>
-        <div class="header-img">
-
+        <div class="header-font">
+          <p>－久郷ポンナレット－</p>
         </div>
         　　
       </div>
       <div class="header-menu">
         <ul class="header-menu-right">
           <li>
-            <a href="">HOME</a>
+            <a href="index.html">HOME</a>
           </li>
           <li>
             <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
           </li>
           <li>
-            <a href="http://www.scn-net.ne.jp/~ponnaret/mail.html">お問い合わせ</a>
+            <a href="mail.html">お問い合わせ</a>
           </li>
         </ul>
         <div class="wrapper">
@@ -47,13 +47,13 @@
           <nav>
             <ul>
               <li>
-                <a href="">HOME</a>
+                <a href="index.html">HOME</a>
               </li>
               <li>
                 <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
               </li>
               <li>
-                <a href="http://www.scn-net.ne.jp/~ponnaret/mail.html">お問い合わせ</a>
+                <a href="mail.html">お問い合わせ</a>
               </li>
             </ul>
           </nav>
@@ -120,14 +120,14 @@
           <tr class="table-culm">
             <td>
               <div class="top-book">
-                <a href="http://www.scn-net.ne.jp/~ponnaret/dance.html"><img src="img/IMG_9466.JPG">
+                <a href="dance.html"><img src="img/IMG_9466.JPG">
                   <p>カンボジアの<br>光と影<p></p>
                 </a>
               </div>
             </td>
             <td>
               <div class="top-book">
-                <a href="http://www.scn-net.ne.jp/~ponnaret/sabetuhantai.html"><img src="img/IMG_9468.jpg">
+                <a href="sabetuhantai.html"><img src="img/IMG_9468.jpg">
                   <p>来日時受けた<br>人種差別<p></p>
                 </a>
               </div>
@@ -144,7 +144,7 @@
           <tr class="table-culm">
             <td>
               <div class="top-book">
-                <a href="http://www.scn-net.ne.jp/~ponnaret/trip_2001.html"><img src="img/IMG_9459.JPG">
+                <a href="trip_2001.html"><img src="img/IMG_9459.JPG">
                   <p>家族で<br>カンボジア旅行<p></p>
                 </a>
               </div>
@@ -162,14 +162,15 @@
           <tr class="table-culm">
             <td>
               <div class="top-book">
-                <a href="http://www.scn-net.ne.jp/~ponnaret/books.html"><img src="img/book.jpg">
+                <!-- <a href="http://www.scn-net.ne.jp/~ponnaret/books.html"><img src="img/book.jpg"> -->
+                <a href="books.html"><img src="img/book.jpg">
                   <p>書籍一覧<p></p>
                 </a>
               </div>
             </td>
             <td>
               <div class="top-book">
-                <a href="http://www.scn-net.ne.jp/~ponnaret/mail.html"><img src="img/IMG_mail.JPG">
+                <a href="mail.html"><img src="img/IMG_mail.JPG">
                   <p>メールBOX<p></p>
                 </a>
               </div>
