2021/5/17 一部「色のない空ページ」細かい漏れ修正

--- a/visit.html
+++ b/visit.html
@@ -209,12 +209,23 @@ width=700 border=0><BR><BR>
       src="visit.files/20060911_05.jpg" border=1>　<IMG 
       src="visit.files/20060911_04.jpg" border=1> <IMG 
       src="visit.files/20060911_06.jpg" border=1> 
-  <BR><BR><BR><BR><BR></P></TD></TR></TABLE><BR><BR><TR><TD><A 
-href="index.html"><IMG height=50 
-src="index.files/logo7.gif" width=200 border=0><BR>TOPへ戻る</A> 
-</TD></TR></TABLE>
+      
+  <BR><BR><BR></P></TD></TR></TABLE>
+    <BR><BR><BR>
+    <IMG height=50 
+src="index.files/end.gif" width=700 border=0> 
+<table bgcolor="white">
+  
+<tr>
+<td>
+<A href="index.html">
+<img src="index.files/logo7.gif" width="200" height="50" border=0><br>
+TOPへ戻る</a>
+</td>
+</tr>
+</table>
 
-  /* ハンバーガー用scriptファイル読み込み */
+
   <script type="text/javascript" src="script.js"></script>
 
 </BODY>
