2021/05/20 指摘箇所を修正対応

--- a/irononaisora.html
+++ b/irononaisora.html
@@ -190,7 +190,7 @@
   <TABLE bgColor=white>
     
     <TR>
-      <TD><A href="http://www.scn-net.ne.jp/~ponnaret"><IMG height=50 
+      <TD><A href="index.html"://www.scn-net.ne.jp/~ponnaret"><IMG height=50 
         src="index.files/logo7.gif" width=200 border=0><BR>TOPへ戻る</A> 
     </TD></TR></TABLE></B>
 
