--- a/kagaisha_taimen.html
+++ b/kagaisha_taimen.html
@@ -75,7 +75,7 @@
 
     <div class="kagaisha_main_title">
       <p>今回の加害者との「対面・対話・和解」への旅も2005年の合同慰霊への旅同様、<br>
-        朝日新聞アジア総支局長でいらっしゃる貝瀬秋彦さんが現地への同行取材して下さいました。<br>
+        朝日新聞アジア総局長でいらっしゃる貝瀬秋彦さんが現地への同行取材して下さいました。<br>
         そのため、このページに掲載された貴重な加害者の生の声の動画や写真は朝日新聞社によってご提供いただいたものです。
       </p>
     </div>
