--- a/osanakihi.html
+++ b/osanakihi.html
@@ -88,7 +88,7 @@
             <FONT color=green ><B>～ポンナレットの幼き日～</B></STRONG></FONT>
             </div>
         <FONT><STRONG><BR>
-            私は1964年、東京オリンピックのあった年にカンボジアの首都プノンペンで三男五女の8人きょうだいの7番目の家庭に生まれました。<br>
+            私は1964年、東京オリンピックのあった年にカンボジアの首都プノンペンで三男五女の8人きょうだいの7番目の家庭に生まれました。<br><br>
             父と母はどんなときでも私と目が合えば「ニコっ」と微笑んでくれるとても愛情深かい2人でした。<br>
             おまけに両親共教育者だったため私が就学前の2年間、家から徒歩で通える幼稚園に通わせてもらいました。<br>
             日々のあふれるほどの愛情と個性的なきょうだいに囲まれて育ったおかげで、私は全く人見知りしない子どもでした。<br>
@@ -98,12 +98,12 @@
             その政策の一環として生まれ故郷を追い出され、家族やきょうだいたちとの隔離、年中無休状態の長時間の重労働と慢性的な栄養失調。<br>
             親と暮らしたい！学校へ行きたい！友達と遊びたい！食べたい！歌っておどりたい！寝たい！笑いたい！泣きたい!この年齢。<br>
             それなのに、この忌々(いまいま)しい戦争がそれらすべてを私から奪ってしまいました。気づけば10人家族が4人になってしまったのです。<br>
-            そして15歳で運良く日本に辿(たど)り着いた頃には「戦争体験・戦争孤児・迫害・飢餓・難民・差別・外国人の壁・言葉の壁・精神的外傷」などの、<br>
+            そして15歳で運良く日本に辿(たど)り着いた頃には「戦争体験・戦争孤児・迫害・飢餓・難民・差別・外国人の壁・言葉の壁・精神的外傷」などの、
             人生において必要のない経験ばかりを積まれたわけです。<br>
             先ほども述べたように15歳のもっとも暑い夏の日に、私は「夢の星・希望の星」である日本へと降り立ち「人生をやり直す」一大決心をしました。<br>
             思えば内戦当時のカンボジア社会にとって「生産性のない者は生かしておいても社会の利益にならない！」という政策をとっていました。<br>
-            どんな人でも家族にとってかけがえのない存在であり、生涯において精神的な支えである！もちろん言うまでもないけれど、<br>
-            「世界中の人々の命は尊いかつ皆平等に一つずつしかない！」のです。<br>
+            どんな人でも家族にとってかけがえのない存在であり、生涯において精神的な支えである！もちろん言うまでもないけれど、
+            「世界中の人々の命は尊いかつ皆平等に一つずつしかない！」のです。<br><br>
             来日して気づけば4０年の月日が流れ、世界平和の実現は「報復でもなければ復讐」でもなく、「対話と和解と赦し」以外方法がない！」のです。<br>
             そのことを世界中の皆さんと分かち合えたらこれ以上の幸せはありません。<br>
             なお私は今とても幸せですが、それを確保するのにその代償があまりにも大きすぎたと思っております。</STRONG></FONT>
