--- a/sabetuhantai.html
+++ b/sabetuhantai.html
@@ -65,13 +65,14 @@
 春秋社,虐殺,偏見,戦争,家族,アジア,民族,舞踊,平塚,学校,日本語,教える,本人,新聞,雑誌,掲載,教育委員会" name=Keywords>
 </head>
 
-<body class="irononaisora_body">
+<body class="sabetu_body">
 
 <IMG height=51 alt=来日後に受けた「人種差別、偏見」 src="index.files/logo2.gif" width=391 
 border=0>
 
 <br>
 <br>
+<div class="sabetu_font">
 <b>
 [１］指紋採り<br>
 </b>来日したばかりの頃の出来事です。<br>
@@ -110,6 +111,8 @@ border=0>
 「お前、ゴキブリみたいに色が黒いね。」<br>
 「あんたの命はおまけだね。」<br>
 「難民は日本社会の負担？」<br>
+「難民と言えばあなたしか思い浮かばなかった」<br>
+「日本人を見習いなさい」<br>
 その他諸々．．．<br>
 <br>
 つい先日も、恩人でいらっしゃる方のカンボジアの絹絣と衣展に出かけた際、<br>
@@ -128,15 +131,7 @@ border=0>
 <br>
 <br>
 <b>
-[４］「難民と言えばあなたしか思い浮かばなかった」<br>
-</b>
-<br>
-<br>
-<b>
-[５］「日本人を見習いなさい」<br>
-</b>
-<br>
-<br>
+</div>
 </body>
 
 </html>
