--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
               </div>
             </td>
             <td>
+              <div class="top-book">
+                <a href="kouen_yotei.html"><img src="img/IMG_9459.JPG">
+                  <p>講演予定<p></p>
+                </a>
+              </div>
             </td>
           </tr>
           <tr class="table-culm">
