--- a/kouen_yotei.html
+++ b/kouen_yotei.html
@@ -73,13 +73,20 @@
     </div>
 
   <div class="kouen_main">
-    （１）2021年10月＝青山学院大学<br>
-    （２）2021年12月＝大阪<br>
-    （３）2022年1月＝兵庫県<br>
+  1）日時：2021年10月半ば<br>
+　会場：青山学院大学<br>
+　対象：学生さんや関係者の方々<br><br>
+
+  2）日時：2021年12月5日（日）14：30～16：00<br>
+　会場：大阪府吹田市文化会館中ホール<br>
+　名称：「人権フェスティバル」<br><br>
+
+  3）日時：2022年1月29日（土）14：00～<br>
+  会場：兵庫県「武庫地域振興センター」<br>
   </div>
-<div class="kouen_yotei_mail">
-  講演依頼は、下記メールにてお待ちしております。<br>
-  久郷ポンナレット　<a href="mailto:a-daeth@mg.scn-net.ne.jp">a-daeth@mg.scn-net.ne.jp</a>
+<div class="kouen_yotei_bikou">
+  講演に関する最新情報は、掲示板にて随時更新しているので、下記リンクからご確認ください。<br>
+  <a href="https://6250.teacup.com/ponnaret/bbs">掲示板へ⇒https://6250.teacup.com/ponnaret/bbs</a>
 </div><br>
 <br>
 <br>
