--- a/kouen_yotei.html
+++ b/kouen_yotei.html
@@ -69,17 +69,22 @@
 
 <div class="kouen_main_div">
   <div class="kouen_title">
-    今 後 の　講 演 予 定<br>
+    今 後 の 講 演 予 定<br>
     </div>
 
-  <div class="kouen_main">
-  1）日時：2021年12月5日（日）14：30～16：00<br>
-　会場：大阪府吹田市文化会館中ホール<br>
-　名称：「人権フェスティバル」<br><br>
+  <!-- <div class="kouen_main">
+        1）日時：2021年12月5日（日）14：30～16：00<br>
+    　会場：大阪府吹田市文化会館中ホール<br>
+    　名称：「人権フェスティバル」<br><br>
 
-  2）日時：2022年1月29日（土）14：00～<br>
-  会場：兵庫県「武庫地域振興センター」<br>
+      2）日時：2022年1月29日（土）14：00～<br>
+      会場：兵庫県「武庫地域振興センター」<br>
   </div>
+  </div> -->
+  <div class="kouen_main_mitei">
+    次回の講演予定は未定となっています。
+  </div>
+
 <div class="kouen_yotei_bikou">
   講演に関する最新情報は、掲示板にて随時更新しているので、下記リンクからご確認ください。<br>
   <a href="https://6250.teacup.com/ponnaret/bbs">掲示板へ⇒https://6250.teacup.com/ponnaret/bbs</a>
