2020/3/19 講演予定内容修正

--- a/kouen_yotei.html
+++ b/kouen_yotei.html
@@ -82,7 +82,7 @@
   </div>
   </div> -->
   <div class="kouen_main_mitei">
-    次回の講演予定は未定となっています。
+    次回の講演予定は未定です。
   </div>
 
 <div class="kouen_yotei_bikou">
