2022/3/22 講演予定追加

--- a/kouen_yotei.html
+++ b/kouen_yotei.html
@@ -72,18 +72,34 @@
     今 後 の 講 演 予 定<br>
     </div>
 
-  <!-- <div class="kouen_main">
-        1）日時：2021年12月5日（日）14：30～16：00<br>
-    　会場：大阪府吹田市文化会館中ホール<br>
-    　名称：「人権フェスティバル」<br><br>
-
-      2）日時：2022年1月29日（土）14：00～<br>
-      会場：兵庫県「武庫地域振興センター」<br>
+  <div class="kouen_main">
+      【講演予定①】<br>
+        開催日：2022年8月11日（木・祝）<br>
+        名称：平和のつどい<br>
+        主催：京都府 京田辺市<br>
+        会場：京田辺市立中央公民館<br>
+        住所：〒610-0331 京都府京田辺市田辺丸山214<br>
+        <br>
+        ※コロナウイルスの影響で開催当日に弊社スタッフが講演を撮影し<br>
+        後日希望者（申込者）のみにYouTubeにて限定配信を予定されております。<br>
+        期間は31日間程を想定されております。<br>
+        <br>
+        <br>
+        【講演予定②】<br>
+        日程：2022年8月26日（火）<br>
+        名称：平和のつどいin岐阜<br>
+        主催：連合岐阜<br>
+        会場：可児市文化創造センター<br>
+        アクセス：可児駅よりお車で10分ほどの距離となります。<br>
+        対象：組合員（150人予定）<br>
+        内容：虐殺と差別を乗り越えて<br>
+        時間：18：45～20：30の間で90分間<br>
+        ※講演時間が多少変更する場合がございます。<br>
   </div>
-  </div> -->
-  <div class="kouen_main_mitei">
+  </div>
+  <!-- <div class="kouen_main_mitei">
     次回の講演予定は未定です。
-  </div>
+  </div> -->
 
 <div class="kouen_yotei_bikou">
   講演に関する最新情報は、掲示板にて随時更新しているので、下記リンクからご確認ください。<br>
