--- a/kouen_yotei.html
+++ b/kouen_yotei.html
@@ -73,6 +73,7 @@
     </div>
 
   <div class="kouen_main">
+    <br>
       【講演予定①】<br>
         開催日：2022年8月11日（木・祝）<br>
         名称：平和のつどい<br>
@@ -94,7 +95,7 @@
         対象：組合員（150人予定）<br>
         内容：虐殺と差別を乗り越えて<br>
         時間：18：45～20：30の間で90分間<br>
-        ※講演時間が多少変更する場合がございます。 <br>
+        ※講演時間が多少変更する場合がございます。 <br><br>
   </div>
   </div>
   <!-- <div class="kouen_main_mitei">
