2022/6/11_講演予定更新

--- a/kouen_yotei.html
+++ b/kouen_yotei.html
@@ -74,28 +74,49 @@
 
   <div class="kouen_main">
     <br>
-      【講演予定①】<br>
-        開催日：2022年8月11日（木・祝）<br>
-        名称：平和のつどい<br>
-        主催：京都府 京田辺市<br>
-        会場：京田辺市立中央公民館<br>
-        住所：〒610-0331 京都府京田辺市田辺丸山214<br>
-        <br>
-        ※コロナウイルスの影響で開催当日に弊社スタッフが講演を撮影し<br>
-        後日希望者（申込者）のみにYouTubeにて限定配信を予定されております。<br>
-        期間は31日間程を想定されております。<br>
-        <br>
-        <br>
-        【講演予定②】<br>
-        日程：2022年8月26日（火）<br>
-        名称：平和のつどいin岐阜<br>
-        主催：連合岐阜<br>
-        会場：可児市文化創造センター<br>
-        アクセス：可児駅よりお車で10分ほどの距離となります。<br>
-        対象：組合員（150人予定）<br>
-        内容：虐殺と差別を乗り越えて<br>
-        時間：18：45～20：30の間で90分間<br>
-        ※講演時間が多少変更する場合がございます。 <br><br>
+    ＋-----------------------------------------------------------------------------＋<br>
+    日程：7月23日(土曜日）14時から 15時40分<br>
+    趣旨：平和・人権講演<br>
+    主催：武庫地域振興センター<br>
+    会場：尼崎市立武庫西生涯学習プラザ<br>
+    ＋-----------------------------------------------------------------------------＋<br>
+    <br>
+    ＋-----------------------------------------------------------------------------＋<br>
+    開催日：2022年8月11日（木・祝）<br>
+    名称：平和のつどい<br>
+    出演：【講演】　久郷ポンナレット<br>
+    演題「虐殺と差別を乗り越えて～この世でもっとも大切なのは“平和と命”です～<br>
+    主催：京都府 京田辺市<br>
+    会場：京田辺市立中央公民館<br>
+    後日希望者（申込者）のみにYouTubeにて限定配信を予定されております。<br>
+    期間は31日間程を想定されております。<br>
+    ＋-----------------------------------------------------------------------------＋<br>
+    <br>
+    ＋-----------------------------------------------------------------------------＋<br>
+    日程：2022年8月26日（金）<br>
+    【講演概要】<br>
+    主催：連合岐阜<br>
+    対象：組合員（150人予定）<br>
+    主旨：平和のつどいin岐阜<br>
+    内容：虐殺と差別を乗り越えて<br>
+    時間：18：45～20：30の間で90分間<br>
+    　　　※講演時間が多少変更する場合がございます。<br>
+    ＋-----------------------------------------------------------------------------＋<br>
+    <br>
+    ＋-----------------------------------------------------------------------------＋<br>
+    日　時：令和4年11月18日（金）19：35～20：55　(80分)<br>
+    主　催：与謝野町人権教育・啓発計画推進本部<br>
+    事　業：人権教育推進事業「人権問題を考えるつどい（講演会）」<br>
+    会場名：与謝野町立生涯学習センター「知遊館」<br>
+    テーマ：『この世で最も価値あるものは「平和・命・人権」』<br>
+    ＋-----------------------------------------------------------------------------＋<br>
+    <br>
+    ＋-----------------------------------------------------------------------------＋<br>
+    日　時：2022年11月11日(金）11時～12:30（1時間のみ）<br>
+    会　場：青山キャンパス旧短大校舎内教室<br>
+    テーマ：「いのち・女性・社会」<br>
+    演　題：『虐殺と差別を越えて』<br>
+    ＋-----------------------------------------------------------------------------＋<br>
   </div>
   </div>
   <!-- <div class="kouen_main_mitei">
