--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
         <div class="header-font">
           <p>－久郷ポンナレット－</p>
         </div>
-        　　
       </div>
       <div class="header-menu">
         <ul class="header-menu-right">
@@ -32,7 +31,7 @@
             <a href="index.html">HOME</a>
           </li>
           <li>
-            <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+            <a href="osirase.html">お知らせ</a>
           </li>
           <li>
             <a href="mail.html">お問い合わせ</a>
@@ -50,7 +49,7 @@
                 <a href="index.html">HOME</a>
               </li>
               <li>
-                <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+                <a href="osirase.html">お知らせ</a>
               </li>
               <li>
                 <a href="mail.html">お問い合わせ</a>
@@ -67,7 +66,7 @@
   <div class="top-container">
     <div class="top-left">
       <div class="top-img">
-          <img src="img/cKZ5_1474.jpg">
+        <img src="img/cKZ5_1474.jpg">
       </div>
       <div class="two-img">
         <table class="two-table">
@@ -182,12 +181,12 @@
             </td>
             <td>
               <div class="top-book">
-                <a href="https://6250.teacup.com/ponnaret/bbs"><img src="img/board.jpg">
-                  <p>掲示板<p></p>
+                <a href="osirase.html"><img src="img/board.jpg">
+                  <p>お知らせ<p></p>
                 </a>
               </div>
             </td>
-          </tr>       
+          </tr>
         </table>
       </div>
     </div>
@@ -289,9 +288,5 @@
   <footer>Copyright@2002 Ponnareth Kugo All rights reserved</footer>
   <script type="text/javascript" src="script.js"></script>
 </body>
-
-
-
-
 
 </html>
