--- a/kagaisha_taimen.html
+++ b/kagaisha_taimen.html
@@ -37,7 +37,7 @@
               <a href="index.html">HOME</a>
             </li>
             <li>
-              <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+              <a href="osirase.html">お知らせ</a>
             </li>
             <li>
               <a href="mail.html">お問い合わせ</a>
@@ -55,7 +55,7 @@
                   <a href="index.html">HOME</a>
                 </li>
                 <li>
-                  <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+                  <a href="osirase.html">お知らせ</a>
                 </li>
                 <li>
                   <a href="mail.html">お問い合わせ</a>
@@ -171,6 +171,13 @@
 
     <div class="kagaisha_main2">
       <div class="bunka_subtitle" color=black size= +1>～掲載された記事をご紹介します～<BR> 
+      </div>
+
+      <div class="kagaisha_img1">
+        <FONT><STRONG><br>神奈川新聞　掲載年月日：2022年9月22日<br>関連内容は赤字部分</STRONG></FONT>
+        <A href="img/IMG_20221021_0001_setLine.jpg" target=_blank><br>
+          <IMG src="img/IMG_20221021_0001_setLine.JPG" border=1 width=350 height=450></A>
+            <br><br>
       </div>
 
       <div class="kagaisha_img1">
