--- a/osirase.html
+++ b/osirase.html
@@ -66,46 +66,24 @@
 春秋社,虐殺,偏見,戦争,家族,アジア,民族,舞踊,平塚,学校,日本語,教える,本人,新聞,雑誌,掲載,教育委員会" name=Keywords>
 </head>
 
-<body class="kouen_yotei_body">
+<body class="osirase_body">
 
-  <div class="kouen_main_div">
-    <div class="kouen_title">
-      今 後 の 講 演 予 定<br>
+  <div class="osirase_main_div">
+    <div class="osirase_title">
+      ～お知らせ～<br>
     </div>
-
-    <div class="kouen_main">
-      <p>
-        <br>
-        ＋-----------------------------------------------------------------------------＋<br>
-        日　時：2022年11月11日(金）11時～12:30（1時間のみ）<br>
-        会　場：青山キャンパス旧短大校舎内教室<br>
-        テーマ：「いのち・女性・社会」<br>
-        演　題：『虐殺と差別を越えて』<br>
-        ＋-----------------------------------------------------------------------------＋
+    <br>
+    <div class="osirase_main_box">
+      <p>・今年の講演予定は下記となります。
         <br>
         <br>
-        ＋-----------------------------------------------------------------------------＋<br>
-        日　時：2022年11月18日（金）19：35～20：55　(80分)<br>
-        主　催：与謝野町人権教育・啓発計画推進本部<br>
-        事　業：人権教育推進事業「人権問題を考えるつどい（講演会）」<br>
-        会場名：与謝野町立生涯学習センター「知遊館」<br>
-        テーマ：『この世で最も価値あるものは「平和・命・人権」』<br>
-        ＋-----------------------------------------------------------------------------＋<br>
-
-        <br>
+        リンク先→「<a href="kouen_yotei.html">講演予定一覧</a>」
       </p>
     </div>
-  </div>
-  <!-- <div class="kouen_main_mitei">
-    次回の講演予定は未定です。
-  </div> -->
-  <br>
-  <br>
   </div>
 
   <!-- /* ハンバーガー用scriptファイル読み込み */ -->
   <script type="text/javascript" src="script.js"></script>
 
 </body>
-
 </html>
