--- a/kouen_jisseki.html
+++ b/kouen_jisseki.html
@@ -33,7 +33,7 @@
                   <a href="index.html">HOME</a>
                 </li>
                 <li>
-                  <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+                  <a href="osirase.html">お知らせ</a>
                 </li>
                 <li>
                   <a href="mail.html">お問い合わせ</a>
@@ -51,7 +51,7 @@
                       <a href="index.html">HOME</a>
                     </li>
                     <li>
-                      <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+                      <a href="osirase.html">お知らせ</a>
                     </li>
                     <li>
                       <a href="mail.html">お問い合わせ</a>
