--- a/media.html
+++ b/media.html
@@ -31,7 +31,7 @@
               <a href="index.html">HOME</a>
             </li>
             <li>
-              <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+              <a href="osirase.html">お知らせ</a>
             </li>
             <li>
               <a href="mail.html">お問い合わせ</a>
@@ -49,7 +49,7 @@
                   <a href="index.html">HOME</a>
                 </li>
                 <li>
-                  <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+                  <a href="osirase.html">お知らせ</a>
                 </li>
                 <li>
                   <a href="mail.html">お問い合わせ</a>
@@ -76,6 +76,16 @@
   <TR><TD>
   
   <!--追加箇所  -->
+
+  <FONT color=green size=+1><B>神奈川新聞　（掲載年月日：2022年9月22日）</B></STRONG></FONT><BR>
+    <FONT color=green><STRONG>プノンペン共同<BR></STRONG></FONT>
+    <FONT size=3>
+    暴政 風化させない<br>
+      <br>
+      <A href="img/IMG_20221021_0001.jpg" target=_blank><b>↓全文は以下。クリックすると大きく表示されます</b><br>
+        <IMG src="img/IMG_20221021_0001.jpg" border=1 width=400></A>
+        
+  <BR><BR><HR>
 
   <FONT color=green size=+1><B>信濃毎日新聞　（掲載年月日：2019年7月30日）</B></STRONG></FONT><BR>
     <FONT color=green><STRONG>山ろく清談<BR></STRONG></FONT>
