--- a/omoide_shashin.html
+++ b/omoide_shashin.html
@@ -29,7 +29,7 @@
             <a href="index.html">HOME</a>
           </li>
           <li>
-            <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+            <a href="osirase.html">お知らせ</a>
           </li>
           <li>
             <a href="mail.html">お問い合わせ</a>
@@ -47,7 +47,7 @@
                 <a href="index.html">HOME</a>
               </li>
               <li>
-                <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+                <a href="osirase.html">お知らせ</a>
               </li>
               <li>
                 <a href="mail.html">お問い合わせ</a>
