--- a/osanakihi.html
+++ b/osanakihi.html
@@ -32,7 +32,7 @@
               <a href="index.html">HOME</a>
             </li>
             <li>
-              <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+              <a href="osirase.html">お知らせ</a>
             </li>
             <li>
               <a href="mail.html">お問い合わせ</a>
@@ -50,7 +50,7 @@
                   <a href="index.html">HOME</a>
                 </li>
                 <li>
-                  <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+                  <a href="osirase.html">お知らせ</a>
                 </li>
                 <li>
                   <a href="mail.html">お問い合わせ</a>
