--- a/trip_2001.html
+++ b/trip_2001.html
@@ -35,7 +35,7 @@
                   <a href="index.html">HOME</a>
                 </li>
                 <li>
-                  <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+                  <a href="osirase.html">お知らせ</a>
                 </li>
                 <li>
                   <a href="mail.html">お問い合わせ</a>
@@ -53,7 +53,7 @@
                       <a href="index.html">HOME</a>
                     </li>
                     <li>
-                      <a href="https://6250.teacup.com/ponnaret/bbs">掲示板</a>
+                      <a href="osirase.html">お知らせ</a>
                     </li>
                     <li>
                       <a href="mail.html">お問い合わせ</a>
