2022-1101 追加新聞記事の文言修正、画像パス修正

--- a/kagaisha_taimen.html
+++ b/kagaisha_taimen.html
@@ -174,9 +174,9 @@
       </div>
 
       <div class="kagaisha_img1">
-        <FONT><STRONG><br>神奈川新聞　掲載年月日：2022年9月22日<br>関連内容は赤字部分</STRONG></FONT>
+        <FONT><STRONG><br>共同通信(神奈川新聞)　掲載年月日：2022年9月22日<br>関連内容は赤字部分</STRONG></FONT>
         <A href="img/IMG_20221021_0001_setLine.jpg" target=_blank><br>
-          <IMG src="img/IMG_20221021_0001_setLine.JPG" border=1 width=350 height=450></A>
+          <IMG src="img/IMG_20221021_0001_setLine.jpg" border=1 width=350 height=450></A>
             <br><br>
       </div>
 
