--- a/media.html
+++ b/media.html
@@ -77,7 +77,7 @@
   
   <!--追加箇所  -->
 
-  <FONT color=green size=+1><B>神奈川新聞　（掲載年月日：2022年9月22日）</B></STRONG></FONT><BR>
+  <FONT color=green size=+1><B>共同通信(神奈川新聞)　（掲載年月日：2022年9月22日）</B></STRONG></FONT><BR>
     <FONT color=green><STRONG>プノンペン共同<BR></STRONG></FONT>
     <FONT size=3>
     暴政 風化させない<br>
