20221217_講演予定更新

--- a/kouen_yotei.html
+++ b/kouen_yotei.html
@@ -72,7 +72,7 @@
     <div class="kouen_title">
       今 後 の 講 演 予 定<br>
     </div>
-
+    <!--
     <div class="kouen_main">
       <p>
         <br>
@@ -95,10 +95,11 @@
         <br>
       </p>
     </div>
+    -->
   </div>
-  <!-- <div class="kouen_main_mitei">
+  <div class="kouen_main_mitei">
     次回の講演予定は未定です。
-  </div> -->
+  </div>
   <br>
   <br>
   </div>
